--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <title>Manipulating the DOM</title>
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
-  <link href="C:\Users\mai\Desktop\Landing page\CSS\style.css" rel="stylesheet">
- <!--  -->
- <!--  -->
+  <link href="CSS\style.css" rel="stylesheet"> 
         </head>
 
         <body>
@@ -104,7 +102,7 @@
     <p>&copy Udacity</p>
   </footer>
 
-  <script src="C:\Users\mai\Desktop\Landing page\JS\app.js"></script>
+  <script src="JS\app.js"></script>
   
         </body>
     </html>
